--- a/src/app/index.css
+++ b/src/app/index.css
@@ -6,6 +6,56 @@
  * Made By MaterializeCSS.com
  */
 
+input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid, 
+input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid, 
+input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid {
+    border-bottom: 1px solid #546e7a;
+    box-shadow: 0 0 0 0 #546e7a;
+}
+
+[type="radio"].with-gap:checked + label:after {
+    border: 2px solid #546e7a;
+    background-color: #546e7a;
+}
+
+[type="radio"].with-gap:checked + label:before {
+    border-radius: 50%;
+    border: 2px solid #546e7a;
+}
+
+input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea {
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 0;
+    height: 3rem;
+    width: 100%;
+    font-size: 1rem;
+    margin: 0 0 5px 0;
+}
+
+button, input, optgroup, select, textarea {
+    color: #546e7a;
+}
+
+.tabs .tab a {
+    color: #ffffff;
+    background-color: #aed581;
+}
+
+.tabs .tab a:hover {
+    background-color: #8bc34a;;
+    color: #ffffff;
+}
+
+.tabs .indicator {
+    background-color: #ef5350;
+    height: 3px;
+}
+
+.tabs .tab.disabled a {
+    color: #7cb342;
+    cursor: default;
+}
+
 p {
     line-height: 2rem;
 }
