--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -11,8 +11,8 @@
                 </div>
                 <div class="col s10">
                     <br/>
-                    <h5>{{'civilSection.line1' | translate}}</h5>
-                    <h6>{{'civilSection.line2' | translate}}</h6>
+                    <h5 translate="civilSection.line1"></h5>
+                    <h6 translate="civilSection.line2"></h6>
                 </div>
                 <div class="col m2 s1">
                     <br/>&nbsp;
