--- a/src/app/modules/commons/users/password/password.html
+++ b/src/app/modules/commons/users/password/password.html
@@ -58,12 +58,12 @@
 					    	<div id="recaptcha_image"></div>
 					    </div>
 					    <div class="col s6 m1" style="line-height:0.5;">
-					    	<a href="javascript:Recaptcha.reload()"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/refresh.png"></a><br class="hide-on-med-and-down">
-			    			<a class="recaptcha_only_if_image" href="javascript:Recaptcha.switch_type('audio')" id="icon-audio"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/audio.png"></a>
-		      				<a class="recaptcha_only_if_audio" href="javascript:Recaptcha.switch_type('image')" id="icon-image"><img width="25" height="18" src="http://www.google.com/recaptcha/api/img/clean/text.png"></a><br class="hide-on-med-and-down">
-		      				<a href="javascript:Recaptcha.showhelp()"><img id="recaptcha_whatsthis" width="25" height="16" src="http://www.google.com/recaptcha/api/img/clean/help.png" alt="Aide"></a>
+					    	<a href="javascript:Recaptcha.reload()"><img width="25" height="18" src="https://www.google.com/recaptcha/api/img/clean/refresh.png"></a><br class="hide-on-med-and-down">
+			    			<a class="recaptcha_only_if_image" href="javascript:Recaptcha.switch_type('audio')" id="icon-audio"><img width="25" height="18" src="https://www.google.com/recaptcha/api/img/clean/audio.png"></a>
+		      				<a class="recaptcha_only_if_audio" href="javascript:Recaptcha.switch_type('image')" id="icon-image"><img width="25" height="18" src="https://www.google.com/recaptcha/api/img/clean/text.png"></a><br class="hide-on-med-and-down">
+		      				<a href="javascript:Recaptcha.showhelp()"><img id="recaptcha_whatsthis" width="25" height="16" src="https://www.google.com/recaptcha/api/img/clean/help.png" alt="Aide"></a>
 					    </div>
-					    <div class="col s6 m4"><img id="recaptcha_logo" alt="" width="71" height="36" src="http://www.google.com/recaptcha/api/img/clean/logo.png"></div>
+					    <div class="col s6 m4"><img id="recaptcha_logo" alt="" width="71" height="36" src="https://www.google.com/recaptcha/api/img/clean/logo.png"></div>
 						<div class="col s12 m6">
 							<input type="text" id="recaptcha_response_field" name="recaptcha_response_field" />
 						</div>
@@ -78,7 +78,7 @@
 	                <a href="" ng-click="cancelRenew()" class="modal-action modal-close waves-effect waves-red btn btn-s red" style="max-width:50%"
 	                   translate="commons.buttons.cancel"></a>
 	                <button type="submit" class="btn btn-s waves-effect waves-red  green darken-1" style="max-width:50%"
-	                        translate="commons.buttons.validate"/>
+	                        translate="commons.buttons.validate"></button>
 	            </div>
         	</div>
     	</form>
