--- a/src/app/modules/commons/users/profile/profil.html
+++ b/src/app/modules/commons/users/profile/profil.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col s12">
             <ul class="tabs" tabs>
-                <li class="tab col M2"><a href="#profile">{{'profile.tabs.profil' | translate }}</a></li>
+                <li class="tab col s2"><a href="#profile">{{'profile.tabs.profil' | translate }}</a></li>
                 <li class="tab col s2"><a href="#passwordUser">{{'profile.tabs.password' | translate }}</a></li>
                 <li class="tab col s2 disabled"><a href="#sharing">{{'profile.tabs.sharing' | translate }}</a></li>
                 <li class="tab col s2 disabled"><a href="#notification">{{'profile.tabs.notification' | translate }}</a></li>
